House prices data

--- a/practice/ibm/ibm_notebook.ipynb
+++ b/practice/ibm/ibm_notebook.ipynb
@@ -12605,7 +12605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -12620,7 +12620,7 @@
     "correct = 0.0\n",
     "total = 0.0\n",
     "for i, row in enumerate(torch_x):\n",
-    "    pred = torch_model(row.float())\n",
+    "    pred = torch_model(torch_x[i].float())\n",
     "    pred = torch.max(pred.data, 0)\n",
     "    \n",
     "    if pred[1] == torch_y[i]:\n",
@@ -12628,6 +12628,46 @@
     "    total += 1\n",
     "\n",
     "print(correct/total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(155240.), tensor(0))"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred = torch_model(torch_x[9].float())\n",
+    "pred = torch.max(pred.data, 0)\n",
+    "pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "if pred[1] == torch_y[9]:\n",
+    "    print(\"yes\")"
    ]
   },
   {
