--- a/practice/GANs/GANs, Pytorch.ipynb
+++ b/practice/GANs/GANs, Pytorch.ipynb
@@ -36,7 +36,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A Practical Implementation using Pytorch"
+    "## A Practical Implementation using Pytorch\n",
+    "\n",
+    "What we need to see GANs in action:\n",
+    "\n",
+    "- An actual dataset\n",
+    "- "
    ]
   },
   {
